3.5
	+ Fixed spurious warnings when loadings ads and loading dashboard
	+ Assure that all data under a row directory is removed
	+ EBox::Types::DomainName always return lowercase values
	+ EBox::Types::Host always return lowercase values
	+ Added helper script to improve crash reports
	+ Old timezones supported
	+ Fixed regression on presetUpdate interface actions
	+ Error page for component not found
	+ Included the Dependencies field in crash report
	+ Do not mark services as temporary stopped when shutting down
	+ Enhanced Lock to have exclusive lock with blocking timeout
	+ Added redirection on no parameters support to CGIs
	+ Added and used in save changes process the method Zentyal.reloadTable
	+ Fixed regression in page not found CGI which displayed always a
	  invalid referer error
	+ Included the package field in crash report
	+ Remove RSS and Jabber dispatchers
	+ Added Warning in Dashboard when reboot is requierd by software
	  update
	+ Removed deprecated sliced mode backup
	+ Fix MIME type for returning JSON (application/json)
	+ Added setMessage() and popMessageAndClass() methods to TreeView
	+ Enable InnoDB engine when there are only 4 previous databases
	+ Active session check does not check subapp authenticated
	  requests now
	+ Fixed incorrect URLs with double ports in redirects
	+ Fix typo in general widget
	+ Updated nginx to server static files directly always so apache shouldn't
	  ever get this kind of requests
	+ Set version to 3.5
	+ Support for redirection when loading URL in existent dialog
	+ Added webadmin port tag to haproxy configuration file
	+ Fix dashboard UI freeze when widgets were being updated
	+ Add audit to post save when enabling logs
	+ Fix enabled save changes button after installing packages
	+ Changed CGI base to show correctly referer errors and
	  generating response errors
	+ Override daemons does not fail if a daemon is already stopped
	+ Added missing use to row.mas